--- a/Page3.html
+++ b/Page3.html
@@ -6,10 +6,10 @@
 </head>
 <table align="center">
     <tr>
-        <th><a href="Test%20Trial.html"> Home Page </a></th>
-        <th><a href="Page%202.html"> Going GREEK </a></th>
-        <th><a href="Page%203.html"> UMaine Rugby </A></th>
-        <th><a href="Page%204.html"> Color Guard </A></th>
+        <th><a href="TestTrial.html"> Home Page </a></th>
+        <th><a href="Page2.html"> Going GREEK </a></th>
+        <th><a href="Page3.html"> UMaine Rugby </A></th>
+        <th><a href="Page4.html"> Color Guard </A></th>
     </tr>
 </table>
 
